JP-GEtAllUsuario-Colonia, Switch_Status JDBC